--- a/pages/cart.html
+++ b/pages/cart.html
@@ -35,13 +35,13 @@
           <a href="/pages/index.html"> happy kids </a>
         </div>
         <div
-          class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
+          class="d-none d-md-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
         >
           <ul
             class="nav col-12 col-lg-auto offset-xl-3 mb-2 justify-content-center mb-lg-0"
           >
             <li class=""><a href="/pages/index.html" class="nav-link px-2">Home</a></li>
-            <li><a href="#" class="nav-link px-2">Shop Collection</a></li>
+            <li><a href="/pages/product.html" class="nav-link px-2">Shop Collection</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Our Story</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Contact</a></li>
           </ul>
@@ -102,12 +102,12 @@
               </div>
               <hr>
               <div class="btn-textred">
-                <a href="#">
+                <a href="/pages/404.html">
                   Enter a promo code
                 </a>
               </div>
               <div class="btn-textred">
-                <a href="#">
+                <a href="/pages/404.html">
                   Add a note
                 </a>
               </div>
@@ -145,10 +145,10 @@
                 </div>
               </div>
               <div class="btn-primary w-100">
-                <a href="#">Checkout</a>
+                <a href="/pages/404.html">Checkout</a>
               </div>
               <div class="btn-textblack text-center mt-3">
-                <a href="#">Secure Checkout</a>
+                <a href="/pages/404.html">Secure Checkout</a>
               </div>
               
 
@@ -168,7 +168,7 @@
       <div class="container-xl">
         <div class="row">
           <div class="logo-text small">
-            <a href="#">
+            <a href="/pages/index.html">
               happy kids
             </a>
           </div>
@@ -177,22 +177,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/index.html">
                   Home
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/product.html">
                   Shop Collection
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Out Story
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Contact
                 </a>
               </li>
@@ -201,17 +201,17 @@
           <div class="col-4">
             <ul class="social-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/facebook-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/pinterest-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/instagram-svgrepo-com.svg" alt="">
                 </a>
               </li>
@@ -220,22 +220,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Shopping & Returns
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Store Policy
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Payment Methods
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   FAQ
                 </a>
               </li>
@@ -249,7 +249,7 @@
         </div>
         <div class="row justify-content-center mt-3">
           <div class="col-12 col-md-5">
-            <div class="row">
+            <div class="row gy-4">
               <div class="col-12 col-md-8">
                 <input type="email" placeholder="Enter your email here*" type="email"
                 size="64"
@@ -260,7 +260,7 @@
               </div>
               <div class="col-12 col-md-4">
                 <div class="btn-primary">
-                  <a href="#">Subscribe Now</a>
+                  <a href="/pages/404.html">Subscribe Now</a>
                 </div>
               </div>
             </div>
