--- a/pages/index.html
+++ b/pages/index.html
@@ -33,13 +33,13 @@
           <a href="/pages/index.html"> happy kids </a>
         </div>
         <div
-          class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
+          class="d-none d-md-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
         >
           <ul
             class="nav col-12 col-lg-auto offset-xl-3 mb-2 justify-content-center mb-lg-0"
           >
             <li class="active"><a href="/pages/index.html" class="nav-link px-2">Home</a></li>
-            <li><a href="#" class="nav-link px-2">Shop Collection</a></li>
+            <li><a href="/pages/product.html" class="nav-link px-2">Shop Collection</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Our Story</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Contact</a></li>
           </ul>
@@ -85,7 +85,7 @@
               <div class="slide-group position-absolute">
                 <h3>NEW COLLECTION</h3>
                 <div class="btn-secondary">
-                  <a href=""> Shop Now </a>
+                  <a href="/pages/product.html"> Shop Now </a>
                 </div>
               </div>
             </div>
@@ -114,7 +114,7 @@
                   19,99₺
                 </div>
                 <div class="btn-secondary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -130,7 +130,7 @@
                   19,99₺
                 </div>
                 <div class="btn-secondary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -146,7 +146,7 @@
                   19,99₺
                 </div>
                 <div class="btn-secondary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -162,7 +162,7 @@
                   19,99₺
                 </div>
                 <div class="btn-secondary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -178,7 +178,7 @@
                   19,99₺
                 </div>
                 <div class="btn-secondary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -189,8 +189,8 @@
             <div class="swiper-arrival-prev swiper-button-prev"></div>
             <div class="swiper-arrival-next swiper-button-next"></div>
           </div>
-          <div class="btn-primary">
-            <a href="#">
+          <div class="btn-primary mb-5">
+            <a href="/pages/product.html">
               Shop All
             </a>
           </div>
@@ -204,7 +204,7 @@
       <div class="container-xl">
         <div class="row">
           <div class="logo-text small">
-            <a href="#">
+            <a href="/pages/index.html">
               happy kids
             </a>
           </div>
@@ -213,22 +213,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/index.html">
                   Home
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/product.html">
                   Shop Collection
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Out Story
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Contact
                 </a>
               </li>
@@ -237,17 +237,17 @@
           <div class="col-4">
             <ul class="social-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/facebook-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/pinterest-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/instagram-svgrepo-com.svg" alt="">
                 </a>
               </li>
@@ -256,22 +256,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Shopping & Returns
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Store Policy
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Payment Methods
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   FAQ
                 </a>
               </li>
@@ -285,7 +285,7 @@
         </div>
         <div class="row justify-content-center mt-3">
           <div class="col-12 col-md-5">
-            <div class="row">
+            <div class="row gy-4">
               <div class="col-12 col-md-8">
                 <input type="email" placeholder="Enter your email here*" type="email"
                 size="64"
@@ -296,7 +296,7 @@
               </div>
               <div class="col-12 col-md-4">
                 <div class="btn-primary">
-                  <a href="#">Subscribe Now</a>
+                  <a href="/pages/404.html">Subscribe Now</a>
                 </div>
               </div>
             </div>
@@ -327,7 +327,7 @@
       });
 
       const swiperArrival = new Swiper(".arrival-swiper", {
-        slidesPerView: 4,
+        slidesPerView: 1,
         spaceBetween: 39,
         loop: true,
         // autoplay: {
@@ -340,6 +340,12 @@
           nextEl: ".swiper-arrival-next",
           prevEl: ".swiper-arrival-prev",
         },
+        breakpoints: {
+          768: {
+            slidesPerView: 4,
+            spaceBetween: 30
+          },
+        }
       });
     </script>
   </body>
