--- a/pages/product.html
+++ b/pages/product.html
@@ -35,13 +35,13 @@
           <a href="/pages/index.html"> happy kids </a>
         </div>
         <div
-          class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
+          class="d-none d-md-flex flex-wrap align-items-center justify-content-center py-3 mb-4"
         >
           <ul
             class="nav col-12 col-lg-auto offset-xl-3 mb-2 justify-content-center mb-lg-0"
           >
             <li class=""><a href="/pages/index.html" class="nav-link px-2">Home</a></li>
-            <li><a href="#" class="nav-link px-2">Shop Collection</a></li>
+            <li><a href="/pages/product.html" class="nav-link px-2">Shop Collection</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Our Story</a></li>
             <li><a href="/pages/404.html" class="nav-link px-2">Contact</a></li>
           </ul>
@@ -79,12 +79,12 @@
           </ul>
   
           <div class="page-nav-btn">
-            <a href="#">
+            <a href="/pages/404.html">
               <i class="bi bi-chevron-left"></i>
               Prev
             </a>
             <span>|</span>
-            <a href="#">
+            <a href="/pages/404.html">
               Next
               <i class="bi bi-chevron-right"></i>
             </a>
@@ -124,7 +124,7 @@
               <label for="size">
                 Size
               </label>
-              <select name="size" id="size">
+              <select name="size" id="size" class="select-size mb-3">
                 <option value="">12-18 Months</option>
                 <option value="">18-24 Months</option>
                 <option value="">2 Years</option>
@@ -135,14 +135,14 @@
 
               <div class="btn-group">
                 <div class="btn-primary w-100 mt-3">
-                  <a href="">Add to Cart</a>
+                  <a href="/pages/cart.html">Add to Cart</a>
                 </div>
                 <div class="btn-orange w-100 mt-3">
-                  <a href="">Buy Now</a>
+                  <a href="/pages/404.html">Buy Now</a>
                 </div>
               </div>
 
-              <div class="accordion" id="accordionExample">
+              <div class="accordion mt-3" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -151,7 +151,7 @@
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id placeat quibusdam eum laudantium officia! Accusantium rem rerum totam facilis ea?
                     </div>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus numquam distinctio nulla alias non. Alias nemo necessitatibus totam quasi maxime.
                     </div>
                   </div>
                 </div>
@@ -174,7 +174,7 @@
 
       <!-- Related Product -->
       <section>
-        <div class="container-xl">
+        <div class="container-xl my-5">
           <h5 class="section-heading">Related Products</h5>
           <div class="swiper related-swiper">
             <div class="swiper-wrapper">
@@ -189,7 +189,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -205,7 +205,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -221,7 +221,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -237,7 +237,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -253,7 +253,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -269,7 +269,7 @@
                   19,99₺
                 </div>
                 <div class="btn-primary">
-                  <a href="#">
+                  <a href="/pages/cart.html">
                     Add to Cart
                   </a>
                 </div>
@@ -294,7 +294,7 @@
       <div class="container-xl">
         <div class="row">
           <div class="logo-text small">
-            <a href="#">
+            <a href="/pages/index.html">
               happy kids
             </a>
           </div>
@@ -303,22 +303,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/index.html">
                   Home
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/product.html">
                   Shop Collection
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Out Story
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Contact
                 </a>
               </li>
@@ -327,17 +327,17 @@
           <div class="col-4">
             <ul class="social-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/facebook-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/pinterest-svgrepo-com.svg" alt="">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   <img src="/images/Icon/Social icons/instagram-svgrepo-com.svg" alt="">
                 </a>
               </li>
@@ -346,22 +346,22 @@
           <div class="col-4">
             <ul class="footer-list">
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Shopping & Returns
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Store Policy
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   Payment Methods
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/pages/404.html">
                   FAQ
                 </a>
               </li>
@@ -375,7 +375,7 @@
         </div>
         <div class="row justify-content-center mt-3">
           <div class="col-12 col-md-5">
-            <div class="row">
+            <div class="row gy-4">
               <div class="col-12 col-md-8">
                 <input type="email" placeholder="Enter your email here*" type="email"
                 size="64"
@@ -386,7 +386,7 @@
               </div>
               <div class="col-12 col-md-4">
                 <div class="btn-primary">
-                  <a href="#">Subscribe Now</a>
+                  <a href="/pages/404.html">Subscribe Now</a>
                 </div>
               </div>
             </div>
@@ -402,7 +402,7 @@
     
     <script>
       const swiperRelated = new Swiper(".related-swiper", {
-        slidesPerView: 5,
+        slidesPerView: 1,
         spaceBetween: 20,
         loop: true,
         // autoplay: {
@@ -415,6 +415,12 @@
           nextEl: ".swiper-related-next",
           prevEl: ".swiper-related-prev",
         },
+        breakpoints: {
+        768: {
+          slidesPerView: 5,
+          spaceBetween: 20
+        },
+      }
       });
     </script>
   </body>
