--- a/pages/404.html
+++ b/pages/404.html
@@ -74,6 +74,9 @@
         <h6>
           Oops, this page is under construction
         </h6>
+        <p>
+          (Hope to see you in pitching round)
+        </p>
         <div class="btn-primary mt-5">
           <a href="#" onclick="history.back()">
             Back
