--- a/pages/product.html
+++ b/pages/product.html
@@ -274,6 +274,86 @@
                   </a>
                 </div>
               </div>
+              <div class="swiper-slide related-product-card">
+                <div class="product-img">
+                  <img src="/images/Product/Product7.png" alt="" />
+                </div>
+                <div class="product-title">
+                  I'm a product
+                </div>
+                <div class="product-price">
+                  19,99₺
+                </div>
+                <div class="btn-primary">
+                  <a href="/pages/cart.html">
+                    Add to Cart
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide related-product-card">
+                <div class="product-img">
+                  <img src="/images/Product/Product8.png" alt="" />
+                </div>
+                <div class="product-title">
+                  I'm a product
+                </div>
+                <div class="product-price">
+                  19,99₺
+                </div>
+                <div class="btn-primary">
+                  <a href="/pages/cart.html">
+                    Add to Cart
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide related-product-card">
+                <div class="product-img">
+                  <img src="/images/Product/Product9.png" alt="" />
+                </div>
+                <div class="product-title">
+                  I'm a product
+                </div>
+                <div class="product-price">
+                  19,99₺
+                </div>
+                <div class="btn-primary">
+                  <a href="/pages/cart.html">
+                    Add to Cart
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide related-product-card">
+                <div class="product-img">
+                  <img src="/images/Product/Product10.png" alt="" />
+                </div>
+                <div class="product-title">
+                  I'm a product
+                </div>
+                <div class="product-price">
+                  19,99₺
+                </div>
+                <div class="btn-primary">
+                  <a href="/pages/cart.html">
+                    Add to Cart
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-slide related-product-card">
+                <div class="product-img">
+                  <img src="/images/Product/Product6.png" alt="" />
+                </div>
+                <div class="product-title">
+                  I'm a product
+                </div>
+                <div class="product-price">
+                  19,99₺
+                </div>
+                <div class="btn-primary">
+                  <a href="/pages/cart.html">
+                    Add to Cart
+                  </a>
+                </div>
+              </div>
             </div>
             <div class="swiper-related-pagination swiper-pagination"></div>
   
